<resources>
    <string name="app_name">Test task</string>
    <string name="city_name">Москва</string>
    <string name="pizza">Пицца</string>
    <string name="desserts">Десерты</string>
    <string name="combo">Комбо</string>
    <string name="drinks">Напитки</string>
    <string name="menu">Меню</string>
    <string name="profile">Профиль</string>
    <string name="basket">Корзина</string>
    <string name="price">от 345р</string>
    <string name="demo_description">Ветчина Шампиньоны увеличенная порция моцарелла томатный соус</string>
    <string name="demo_title">Ветчина и грибы</string>
</resources>