<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/white">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/colapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/white"
            app:contentScrim="@color/white"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/banner1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="70dp"
                        android:src="@drawable/banner"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/city" />

                    <ImageView
                        android:id="@+id/banner2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="70dp"
                        android:src="@drawable/banner2"
                        app:layout_constraintStart_toEndOf="@id/banner1"
                        app:layout_constraintTop_toTopOf="@id/banner1" />
                </LinearLayout>
            </HorizontalScrollView>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toollbar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                app:layout_collapseMode="pin">

                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_spacing"
                    android:gravity="start"
                    android:text="@string/city_name"
                    android:textColor="@color/dark"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_arrow_down_24"
                    app:layout_constraintStart_toEndOf="@id/city"
                    app:layout_constraintTop_toTopOf="@id/city" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/common_spacing"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_qr_code_scanner_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/city" />

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:orientation="vertical"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:ignore="MissingConstraints"
                tools:listitem="@layout/card_layout" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <HorizontalScrollView
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:paddingTop="24dp"
        android:scrollbars="none"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent">


            <Button
                android:id="@+id/b1"
                android:layout_width="@dimen/width_button"
                android:layout_height="@dimen/height_button"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="@dimen/common_spacing"
                android:background="@drawable/button_category"
                android:text="@string/pizza"
                android:textAllCaps="false"
                android:textColor="@color/text_color_selector"
                android:textSize="@dimen/button_text_size"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/b2"
                android:layout_width="@dimen/width_button"
                android:layout_height="@dimen/height_button"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/button_category"
                android:text="@string/combo"
                android:textAllCaps="false"
                android:textColor="@color/text_color_selector"
                android:textSize="@dimen/button_text_size"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/b3"
                android:layout_width="@dimen/width_button"
                android:layout_height="@dimen/height_button"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/button_category"
                android:text="@string/desserts"
                android:textAllCaps="false"
                android:textColor="@color/text_color_selector"
                android:textSize="@dimen/button_text_size"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/b4"
                android:layout_width="@dimen/width_button"
                android:layout_height="@dimen/height_button"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/button_category"
                android:text="@string/drinks"
                android:textAllCaps="false"
                android:textColor="@color/text_color_selector"
                android:textSize="@dimen/button_text_size"
                tools:ignore="MissingConstraints" />

        </LinearLayout>
    </HorizontalScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        app:itemIconTint="@drawable/ic_first_tab"
        app:itemTextColor="@drawable/ic_first_tab"
        app:menu="@menu/menu" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>